[package]
name = "tbsp"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
tree-sitter = "0.21"
regex = "1.3"
thiserror = "1.0.61"
serde = "1.0.204"
nom = "7.1.3"

tree-sitter-md = {version = "0.2", optional = true}
tree-sitter-typescript = {version = "0.21", optional = true}
tree-sitter-javascript = {version = "0.21", optional = true}
tree-sitter-python = {version = "0.21", optional = true}
tree-sitter-rust = {version = "0.21", optional = true}
argh = "0.1.12"
la-arena = "0.3.1"

[features]
default = ["md", "typescript", "javascript", "rust", "python"]
md = ["tree-sitter-md"]
typescript = ["tree-sitter-typescript"]
javascript = ["tree-sitter-javascript"]
python = ["tree-sitter-python"]
rust = ["tree-sitter-rust"]

[dev-dependencies]
